--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,56 @@
 <!-- <md-input type="text" #playerName placeholder="Name..." (keyup.enter)="startGame(playerName.value)"></md-input> -->
+hell
+<main class="container">
+      
+      <push-notification #myNotification
+        [title]="notification.title"
+        [body]="notification.body"
+        [icon]="notification.icon"
+        [closeDelay]="notification.closeDelay"
+        (action)="notification.action($event)">
+      </push-notification>
+      
+      <article class="row">
+        <header class="col s12">
+          <h5>
+            <i class="left material-icons">add_alert</i> 
+            <span>ng2-notifications</span>
+          </h5>
+        </header>
+        <form (submit)="myNotification.show()" class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input type="text" id="title" [(ngModel)]="notification.title" class="validate" required />
+              <label class="active" for="title">Title</label>
+            </div>
+            <div class="input-field col s6">
+              <input type="text" id="body" [(ngModel)]="notification.body" class="validate" required />
+              <label class="active" for="body">Body</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s6">
+              <input type="text" id="icon" [(ngModel)]="notification.icon" class="validate" />
+              <label class="active" for="icon">Icon</label>
+            </div>
+            <div class="input-field col s6">
+              <input type="text" id="closeDelay" placeholder="Milliseconds" [(ngModel)]="notification.closeDelay" class="validate" />
+              <label class="active" for="closeDelay">Close Delay</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <button type="submit" class="btn red darken-2 waves-effect waves-light">Show Notification</button>
+            </div>
+          </div>
+        </form>
+      </article>
+      
+    </main>
+
+
 <md-toolbar color="primary">
-    HAT MPGs
+   HELLISH
   <span *ngIf="gameStarted">
 <span *ngIf="!myTurn">     ( Not Your Turn )</span>
   <span *ngIf="myTurn">     ( Your Turn )</span>
@@ -235,7 +285,21 @@
 </md-tab-group>
 
 
+
 <style>
+
+    body {
+  margin-top: 30px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+body {
+  background: rgba(0,0,0,0.02);
+}
+
        .flex-container {
         padding: 10px;
         margin: 10px;
@@ -378,3 +442,4 @@
         user-select: none;
     }
 </style>
+
