--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
                             <md-card-title> 
                                 <div *ngIf="spsWinner == 't'"> <b>T WINS!</b> {{spsWinnerAnnouncement}}</div>
                                 <div *ngIf="spsWinner == 'h'"> <strong>H WINS! </strong>{{spsWinnerAnnouncement}}</div>
-                                <div *ngIf="spsWinner == 'draw'">{{spsWinnerAnnouncement}}</div>
+                                <div *ngIf="spsWinner == 'draw'"><strong>{{spsWinnerAnnouncement}}</strong></div>
                             </md-card-title>
                         </md-card>
                     </md-card-title>
